# algorithms

./: .gitignore  LongestIncreasingSubsequence.py  LongestSubstringWithoutRepeatingCharacters.py  README.md  algorithms.code-workspace  algorithms.py  best_time_to_buy_and_sell_a_stock.py  lengthOfLongestSubstring.py  myfile.json  pyproject.toml  spiralMatrix.py  spiralOrder.py  sum_of_two.py  test_algorithms2.py  testfile.txt  testing.txt  thee_sumFM.py  topKFrequent.py  twoSum2a.py  validSudoku.py
copy_1/: MeetingRooms3.py  algorithms.py  balanced_brackets.py  best_time_to_buy_and_sell_a_stock.py  containsDuplicate.py  count_sort_chars.py  def get_permutations(string).py  groupAnagrams.py  longestConsecutiveSequence.py  medianOfSortedArrays.py  test_algorithms.py  test_algorithms2.py  test_countsort.py  thee_sum.py  thee_sumFM.py  three_sum_explanation.py  threesum3.py  validAnagram.py
copy_2/: contains_duplicate.py  group_anagrams.py  group_anagrams.test.py  is_anagram.py
copy_3/: binary_search.py  climbing_stairss.py  combination_sum.py  count_subsets.py  invert_binary_tree.py  is_anagram.py  max_depth_btree.py  merge_intervals.py  search_2d_matrix.py  subsets.py  three_sum.py
copy_3/solution_explanations/: binary_search.md  combination_sum.md  invert_binary_tree.md  is_anagram.md  maximum_depth_btree.md  search_2d_matrx.md
copy_3/tests/: max_depth_btree.test.py  test_binary_search.py  test_invert_binary_tree.py  test_is_anagram.py  test_merge_intervals.py  test_merge_intervals2.py  test_search_2d_matrix.py  (+1 more)
tests/: test_three_sum.py  test_threesum3.py
