[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = "interview algorithms"
authors = ["Levi McDonough <levimcdonough@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.env]
PATH = "PATH:/Users/levi/algorithms/copy_3/:/Users/levi/algorithms/copy_3/tests"
